codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_form_wrapped_url.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: snapshot_buffer(&buf)
---
                                        
  Field 1/1 (1 required unanswered)     
  Review https://github.com/openai/     
  codex/pull/12345?diff=split before    
  choosing.                             
                                        
  Continue                              
  › 1. True                             
    2. False                            
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
  enter to submit | esc to cancel
